...
        size: value['size'],
        contentId: value['content_id'],
      );
}

enum MailAction {
  none('None'),
  archive('Archive'),
  trash('Trash'),
  read('Read / unread'),
  star('Flag / unflag'),
  select('Select'),
  move('Move'),
  spam('Spam');

  const MailAction(this.label);
  final String label;
...
